Corrected header sub menu position z-index: 1;

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -173,6 +173,7 @@ header nav ul li ul {
     position: absolute;
     top: 100px;
     width: 100%;
+    z-index: 1;
 }
 
 header nav ul li ul:before {
